--- a/Drawsome.Tests/Drawsome.Tests.csproj
+++ b/Drawsome.Tests/Drawsome.Tests.csproj
@@ -12,6 +12,8 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore" Version="2.3.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.3.0" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Core" Version="1.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.14" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.14" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
