--- a/Drawsome.Tests/Drawsome.Tests.csproj
+++ b/Drawsome.Tests/Drawsome.Tests.csproj
@@ -22,6 +22,8 @@
         <PackageReference Include="NUnit3TestAdapter" Version="4.2.1"/>
         <PackageReference Include="NUnit.Analyzers" Version="3.6.1"/>
         <PackageReference Include="coverlet.collector" Version="6.0.0"/>
+        <PackageReference Include="Selenium.WebDriver" Version="4.33.0" />
+        <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="137.0.7151.11900" />
     </ItemGroup>
 
     <ItemGroup>
